[package]
name = "mech-time"
version = "0.0.4"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Time library for the Mech language"
documentation = "http://docs.mech-lang.org"
homepage = "http://mech-lang.org"
repository = "https://github.com/mech-lang/time"
keywords = ["mech", "language", "programming"]
license = "Apache-2.0"
readme = "README.md"

[badges]
gitlab = { repository = "mech-lang/time", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
mech-core = {git = "https://gitlab.com/mech-lang/core"}
mech-utilities = {git = "https://gitlab.com/mech-lang/utilities"}

time = "0.2.15"
crossbeam-channel = "0.4"